# teaseme-backend-starter

./: .gitignore  AI Persona — Tease me 2.csv  MAKEFILE_USAGE.md  MCP_DEVELOPER_GUIDE.md  Makefile  PROJECT_REVIEW.md  README.md  REFACTOR_SUMMARY.md  Survive sheet TESTING.txt  Survive sheet.txt  UTILS_REORGANIZATION.md  alembic.ini  compose.yml  deploy_migrations.sh  dev.compose.yml  dockerfile  prompt-v1.txt  prompt.txt  pyproject.toml  redis_dump_all.py  system.txt  test_push.html
.agent/workflows/: sync-prompts.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  05e2844dfdc9_add_firstpromoter_fields_to_influencers.py  0a768f8a864a_add_users_fields.py  0c113ef76c87_initial.py  114ced4b59ae_remove_fp_tid_from_users.py  1153b75ea876_add_fp_ref_id_to_users.py  1330a77f992a_fix_add_chat_id_to_calls.py  167f995bc156_merge_heads.py  17ea457a1852_add_forgot_password.py  181b4b9f3241_add_influencer_id_third_part.py  19109d84d4b5_chat18.py  19c7cf7032c9_replace_voice_prompt_with_bio_json.py  19d0ec0d3061_add_is_18_flags_for_subscriptions_.py  1a2b3c4d5e6f_add_content_moderation_tables.py  1b0c2f2c7f01_add_influencer_followers_table.py  1c23f1c0c9b1_add_message_channel.py  1c9b122586e1_add_addon_purchase_tracking.py  1e0c023e32c6_add_email_to_influencers.py  1f215bd507f8_add_password_to_pre_influencers.py  2056171fd5ef_is18.py  2139b2e332d3_initial_migration.py  2188ca984f3a_fix_influencer_wallets_schema.py  22c6888b97e0_add_system_prompts_table.py  23649145b822_remove_influencer_gpt_agent_col.py  2475ffd4422c_add_influencer_knowledge_tables.py  2a9b4f8e2b76_merge_heads.py  2f8f26c3e4ad_add_plan_type_to_subscription_plans.py  30dff913e3ac_add_profile_photo_key_to_users.py  3594509c9947_merge_heads.py  3c132e441043_switch_to_influencer_wallets.py  3c9b1b8a2c1a_add_airwallex_payment_records.py  3de6b853327e_add_chat_table.py  3f0b16e442ac_add_terms_agreement_to_pre_influencers.py  40e74fdc8b43_add_pre_influencers_survey.py  43e630570a46_merge_heads.py  (+94 more)
app/: main.py  scheduler.py
csv/: ai_twin.csv
scripts/: delete_system_category.py  migrate_recalculate_costs.py
(+188 files in other folders)
